--- a/adam_cookbook/templates/default/env.erb
+++ b/adam_cookbook/templates/default/env.erb
@@ -3,7 +3,6 @@ GITHUB_KEY=<%= node['adam']['github_key'] %>
 GITHUB_SECRET=<%= node['adam']['github_secret'] %>
 TWITTER_KEY=<%= node['adam']['twitter_key'] %>
 TWITTER_SECRET=<%= node['adam']['twitter_secret'] %>
-ADAM_INTERNAL_PASSWORD=<%= node['adam']['internal_password'] %>
 ADAM_MEMORY_AMQP_HOST=<%= node['adam']['amqp_host'] %>
 ADAM_MEMORY_AMQP_USERNAME=memory
 ADAM_MEMORY_AMQP_PASSWORD=password
@@ -21,6 +20,8 @@ ADAM_BRAIN_AMQP_USERNAME=brain
 ADAM_BRAIN_AMQP_PASSWORD=password
 ADAM_ROOT_DOMAIN=<%= node['adam']['root_domain'] %>
 ADAM_MEMORY_URL=<%= node['adam']['memory_base_url'] %>
+ADAM_MEMORY_INTERNAL_USERNAME=<%= node['adam']['memory']['internal_username'] %>
+ADAM_MEMORY_INTERNAL_PASSWORD=<%= node['adam']['memory']['internal_password'] %>
 AHN_REPORTER_API_KEY=<%= node['adam']['reporter']['api_key'] %>
 AHN_REPORTER_URL=<%= node['adam']['reporter']['url'] %>
 AHN_PLATFORM_LOGGING_LEVEL=debug
