[DEPLOY] Ensure Web app can boot

--- a/adam_cookbook/templates/default/environment.erb
+++ b/adam_cookbook/templates/default/environment.erb
@@ -1,3 +1,5 @@
+export HOME=<%= node['adam']['deployment_path'] %>
+export PORT=3000
 export RAILS_ENV=<%= node['adam']['environment'] %>
 export GITHUB_KEY=<%= node['adam']['github_key'] %>
 export GITHUB_SECRET=<%= node['adam']['github_secret'] %>
