[DEPLOY] Proxy BOSH (XMPP) connections via nginx

--- a/memory/app/assets/javascripts/chat.js.coffee.erb
+++ b/memory/app/assets/javascripts/chat.js.coffee.erb
@@ -1,4 +1,4 @@
-BOSH_SERVICE = "http://#{document.domain}:5280/http-bind"
+BOSH_SERVICE = "http://#{document.domain}/http-bind"
 connection = null
 
 jid = (node) -> "#{node}@#{document.domain}"
