--- a/adam_cookbook/templates/default/nginx_site.erb
+++ b/adam_cookbook/templates/default/nginx_site.erb
@@ -1,4 +1,9 @@
 upstream <%= @resource.application.name %> {
+  <% unless @application_socket.empty? -%>
+    <% @application_socket.each do |socket_name| -%>
+  server unix:<%= socket_name %>;
+    <% end -%>
+  <% end -%>
   <% @hosts.each do |node| %>
   server <%= node.attribute?('cloud') ? node['cloud']['local_ipv4'] : node['ipaddress'] %>:<%= @resource.application_port %>;
   <% end %>
@@ -15,7 +20,7 @@ server {
   # This regexp did not work for me.
   # location ~ ^/http-bind/ {
   location /http-bind {
-    proxy_pass http://localhost:5280;
+    proxy_pass http://<%= node['adam']['memory']['bosh_host'] %>:5280;
   }
   <% @resource.static_files.each do |url, path| %>
   location <%= url %> {
@@ -24,5 +29,10 @@ server {
   <% end %>
   location / {
     proxy_pass http://<%= @resource.application.name %>;
+    <% if @resource.set_host_header %>
+    proxy_set_header   Host             $host;
+    proxy_set_header   X-Real-IP        $remote_addr;
+    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    <% end %>
   }
 }
