[DEPLOY] Use released rbenv cookbook & Chef 11
Use TDB base boxes since they are under MojoLingo's control. We can also ditch chef-solo-search since it's apparently not being used.

--- a/adam_cookbook/templates/default/upstart/component.conf.erb
+++ b/adam_cookbook/templates/default/upstart/component.conf.erb
@@ -7,7 +7,7 @@ respawn
 setuid adam
 chdir <%= @base_directory %>
 
-env PATH=/usr/local/rbenv/shims:/usr/local/rbenv/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/usr/sbin:/sbin:/bin
+env PATH=/opt/rbenv/shims:/opt/rbenv/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/usr/sbin:/sbin:/bin
 
 script
   . /etc/adam/environment
